add new permission and enable peer category level moderation

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -902,6 +902,12 @@ moduls.LikeUsersSearch.label = "Like - enable List action for non-admin users"
 moduls.LikeUsersSearch.permissionName = LIKE_LIST_NON_ADMIN_USERS_PARTNER_LEVEL_PERMISSION
 moduls.LikeUsersSearch.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.PeerCategoryLevelModeration.enabled = true
+moduls.PeerCategoryLevelModeration.permissionType = 2
+moduls.PeerCategoryLevelModeration.label = "Category-Level Peer Moderation"
+moduls.PeerCategoryLevelModeration.permissionName = FEATURE_ENABLE_PEER_CATEGORY_LEVEL_MODERATION
+moduls.PeerCategoryLevelModeration.group = GROUP_ENABLE_DISABLE_FEATURES
+
 ; ACCESS PERMISSIONS
 
 access.error = *
